--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon server.js",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "author": "",
@@ -21,6 +21,7 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "validator": "^13.15.15"
   }
 }
